// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> should render <Exception /> 1`] = `
<div>
  <span>
    网络出小差了！请稍后再试
  </span>
</div>
`;

exports[`<Home /> should render correctly 1`] = `
<div>
  <div
    className="ant-list ant-list-lg ant-list-split ant-list-grid"
  >
    <div
      className="ant-spin-nested-loading"
      style={null}
    >
      <div
        className="ant-spin-container"
      >
        <div
          className="ant-row"
          style={
            Object {
              "marginLeft": -8,
              "marginRight": -8,
            }
          }
        >
          <div
            className="ant-col-24"
          >
            <div
              className="ant-list-item"
              style={
                Object {
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <div
                className="ant-list-item-content ant-list-item-content-single"
              >
                <div
                  className="ant-card ant-card-bordered"
                >
                  <div
                    className="ant-card-head"
                  >
                    <div
                      className="ant-card-head-wrapper"
                    >
                      <div
                        className="ant-card-head-title"
                      >
                        <div>
                          <div>
                            <span
                              className="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-image"
                            >
                              <img
                                onError={[Function]}
                                src="//"
                              />
                            </span>
                            <a
                              href="/user/admin"
                              onClick={[Function]}
                            >
                              <div
                                className="ant-tag ant-tag-purple"
                                data-show={true}
                                style={
                                  Object {
                                    "backgroundColor": null,
                                  }
                                }
                              >
                                admin
                              </div>
                            </a>
                          </div>
                          <div>
                            <div
                              className="ant-tag ant-tag-red"
                              data-show={true}
                              style={
                                Object {
                                  "backgroundColor": null,
                                }
                              }
                            >
                              置顶
                            </div>
                            <a
                              href="/topic/123456789012345678901234"
                              onClick={[Function]}
                            >
                              title1
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ant-card-body"
                    style={Object {}}
                  >
                    <div
                      className="ant-card-meta"
                    >
                      <div
                        className="ant-card-meta-detail"
                      >
                        <div
                          className="ant-card-meta-description"
                        >
                          <div>
                            <div
                              className="undefined"
                              id="ellipsis-152691840000016"
                            >
                              <style>
                                #ellipsis-152691840000016{-webkit-line-clamp: 4;-webkit-box-orient: vertical;}
                              </style>
                              content
                            </div>
                            <div>
                              阅读数:1000
                              <div
                                className="ant-divider ant-divider-vertical"
                              />
                              100条评论
                              <div
                                className="ant-divider ant-divider-vertical"
                              />
                              a day ago
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeTopicTitle /> should not render tab 1`] = `
<div>
  <div>
    <span
      className="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-image"
    >
      <img
        onError={[Function]}
        src="//"
      />
    </span>
    <a
      href="/user/admin"
      onClick={[Function]}
    >
      <div
        className="ant-tag ant-tag-purple"
        data-show={true}
        style={
          Object {
            "backgroundColor": null,
          }
        }
      >
        admin
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/007"
      onClick={[Function]}
    >
      title
    </a>
  </div>
</div>
`;

exports[`<HomeTopicTitle /> should render Tag good 1`] = `
<div>
  <div>
    <span
      className="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-image"
    >
      <img
        onError={[Function]}
        src="//"
      />
    </span>
    <a
      href="/user/admin"
      onClick={[Function]}
    >
      <div
        className="ant-tag ant-tag-purple"
        data-show={true}
        style={
          Object {
            "backgroundColor": null,
          }
        }
      >
        admin
      </div>
    </a>
  </div>
  <div>
    <div
      className="ant-tag ant-tag-green"
      data-show={true}
      style={
        Object {
          "backgroundColor": null,
        }
      }
    >
      精华
    </div>
    <a
      href="/topic/007"
      onClick={[Function]}
    >
      title
    </a>
  </div>
</div>
`;

exports[`<HomeTopicTitle /> should render its own tab ask 1`] = `
<div>
  <div>
    <span
      className="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-image"
    >
      <img
        onError={[Function]}
        src="//"
      />
    </span>
    <a
      href="/user/admin"
      onClick={[Function]}
    >
      <div
        className="ant-tag ant-tag-purple"
        data-show={true}
        style={
          Object {
            "backgroundColor": null,
          }
        }
      >
        admin
      </div>
    </a>
  </div>
  <div>
    <div
      className="ant-tag ant-tag-orange"
      data-show={true}
      style={
        Object {
          "backgroundColor": null,
        }
      }
    >
      问答
    </div>
    <a
      href="/topic/007"
      onClick={[Function]}
    >
      title
    </a>
  </div>
</div>
`;

exports[`<HomeTopics /> should render bottom 1`] = `
<div>
  <div
    className="ant-list ant-list-lg ant-list-split ant-list-grid"
  >
    <div
      className="ant-spin-nested-loading"
      style={null}
    >
      <div
        className="ant-spin-container"
      >
        <div>
          我也是有底线的
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HomeTopics /> should render loading 1`] = `
<div>
  <div
    className="ant-list ant-list-lg ant-list-split ant-list-grid"
  >
    <div
      className="ant-spin-nested-loading"
      style={null}
    >
      <div
        className="ant-spin-container"
      >
        <div>
          <div
            className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i />
              <i />
              <i />
              <i />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
